--- a/bacnet-lutron-demo/BacnetLutronWeb/packages.config
+++ b/bacnet-lutron-demo/BacnetLutronWeb/packages.config
@@ -30,5 +30,6 @@
   <package id="PacketDotNet" version="0.13.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="SharpPcap" version="4.2.0" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
