Changes font oasam

--- a/bacnet-lutron-demo/BacnetLutronWeb/BacnetLutronWeb.csproj
+++ b/bacnet-lutron-demo/BacnetLutronWeb/BacnetLutronWeb.csproj
@@ -226,8 +226,8 @@
     <Content Include="Content\css\bootstrap-slider.min.css" />
     <Content Include="Content\css\bootstrap.css" />
     <Content Include="Content\css\bootstrap.min.css" />
-    <Content Include="Content\css\font-awesome.css" />
-    <Content Include="Content\css\font-awesome.min.css" />
+    <Content Include="Content\font-awesome.css" />
+    <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\css\LutronLightFloor.css" />
     <Content Include="Content\css\RangeSlidar.css" />
     <Content Include="Content\css\Site.css" />
@@ -262,6 +262,7 @@
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
