--- a/bacnet-lutron-demo/BacnetLutronWeb/Web.config
+++ b/bacnet-lutron-demo/BacnetLutronWeb/Web.config
@@ -71,7 +71,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="BackNet_LutronEntities" connectionString="metadata=res://*/DataModal.BackNetLutron.csdl|res://*/DataModal.BackNetLutron.ssdl|res://*/DataModal.BackNetLutron.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC233\SQL2014EXP;initial catalog=BackNet_Lutron;user id=sa;password=softweb#123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="BackNet_LutronEntities" connectionString="metadata=res://*/DataModal.BackNetLutron.csdl|res://*/DataModal.BackNetLutron.ssdl|res://*/DataModal.BackNetLutron.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PC233\SQL2014EXP;initial catalog=BackNet_Lutron;user id=sa;password=softweb#123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="ESD_LutronEntities" connectionString="metadata=res://*/DataModal.ESDLutronEntities.csdl|res://*/DataModal.ESDLutronEntities.ssdl|res://*/DataModal.ESDLutronEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot; Data Source=SOFTWEBPRJ-PC\SQL2012EXP;Initial Catalog=ESDLutronEntities;Integrated Security=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
